--- a/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
+++ b/src/app/features/lms/grp/components/dashboard/components/policy-details/policy-details.component.css
@@ -144,6 +144,151 @@ label, select, input {
 }
 /* .filter by options end */
 
+ /* CSS for X button, to close modal */
+ .modal-header {
+     display: flex;
+     justify-content: space-between;
+     align-items: center;
+ }
+
+ .custom-red-button {
+     color: transparent;
+     background-color: transparent;
+     border: none;
+ }
+
+ .custom-red-button::before {
+     content: "X";
+     color: #EE3945;
+     width: 20px;
+     height: 20px;
+     flex-shrink: 0;
+ }
+
+ /* End of CSS for X button, to close modal */
+
+ .modal-header,
+ .modal-footer {
+     border: none;
+     /* Removes the border between header/footer and body of modal */
+ }
+
+ .selected-row {
+     background-color: #cce5ff !important;
+     /*Changes row color on click*/
+ }
+
+ .label-name {
+     color: grey;
+     margin-right: 10px;
+     white-space: nowrap;
+ }
+
+ .label-desc {
+     color: black;
+ }
+
+ .info {
+    display: flex;
+    justify-content: flex-start;
+    align-items: center;
+}
+
+ .info > div {
+    flex: 1;
+    display: flex;
+    flex-direction: row;
+    align-items: center;
+}
+
+.info .label-name {
+    text-align: right;
+    margin-right: 10px;
+    width: 120px;
+}
+
+.hover-button {
+    display: inline-block;
+    border-radius: 50%;
+    padding: 5px;
+    width: 30px;
+    height: 30px;
+}
+
+.hover-button:hover {
+    background-color: #b8bbb9;
+    cursor: pointer;
+}
+
+ .box-container {
+    display: flex;
+    flex-wrap: wrap;
+    background: #FFF;
+    border-radius: 6px;
+    padding-top: 20px;
+}
+
+.box {
+    width: calc(33.33% - 20px);
+    min-height: 100px;
+    background-color: rgb(229, 240, 248);
+    border-radius: 5px 13px 5px 5px;
+    margin-right: 20px;
+    margin-bottom: 20px;
+    overflow: hidden;
+    position: relative;
+    display: flex;
+    flex-direction: column;
+    justify-content: space-between;
+}
+
+.box:hover {
+    background-color: rgb(156, 208, 244);
+    cursor: pointer;
+}
+
+.box table {
+    width: 90%;
+    margin-top: 30px;
+    margin-left: 20px;
+    margin-bottom: 40px;
+}
+
+.td-data {
+    color: black;
+}
+
+td:first-child {
+    /* width: 50%; */
+    font-weight: 500;
+}
+
+.active-label {
+    position: absolute;
+    top: 0;
+    right: 0;
+    background-color: #00529B;
+    color: white;
+    padding: 1px 4px 1px 20px;
+    border-radius: 0 10px 0 20px;
+    width: 100px;
+}
+
+.title {
+    width: 100%;
+    margin-bottom: 10px;
+    color: #000;
+}
+
+.scroll-content {
+    overflow-x: auto;
+    flex-grow: 1;
+}
+
+.box .active-label {
+    margin-right: 0; /* Override the margin-right for label set elswhere */
+}
+
 @media (max-width: 1200px) {
 
     .container,
@@ -152,6 +297,12 @@ label, select, input {
         align-items: flex-start;
         padding: 20px;
         flex-wrap: wrap;
+    }
+
+    .box {
+        width: 100%;
+        margin-right: 0;
+        margin-bottom: 20px;
     }
 }
 
@@ -203,4 +354,10 @@ label, select, input {
     display: inline-block;
 }
 /* .filter by options end */
+
+.box {
+    width: 100%;
+    margin-right: 0;
+    margin-bottom: 20px;
+}
 }
